# ChangeLog for app-emulation/emul-linux-x86-java
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-java/ChangeLog,v 1.79 2009/11/04 11:29:57 caster Exp $

*emul-linux-x86-java-1.6.0.17 (04 Nov 2009)
*emul-linux-x86-java-1.5.0.22 (04 Nov 2009)

  04 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  +emul-linux-x86-java-1.5.0.22.ebuild,
  +emul-linux-x86-java-1.6.0.17.ebuild:
  Version bump, security bug #291817

*emul-linux-x86-java-1.5.0.21 (29 Sep 2009)

  29 Sep 2009; Vlastimil Babka <caster@gentoo.org>
  +emul-linux-x86-java-1.5.0.21.ebuild:
  Version bump.

*emul-linux-x86-java-1.6.0.16 (18 Aug 2009)

  18 Aug 2009; Vlastimil Babka <caster@gentoo.org>
  -emul-linux-x86-java-1.5.0.18.ebuild,
  -emul-linux-x86-java-1.5.0.19.ebuild,
  -emul-linux-x86-java-1.6.0.13.ebuild,
  -emul-linux-x86-java-1.6.0.14.ebuild,
  +emul-linux-x86-java-1.6.0.16.ebuild:
  Version bump, fixes JDWP threadid problems. Remove old.

  11 Aug 2009; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-java-1.5.0.20.ebuild:
  amd64 stable, bug #280409

  11 Aug 2009; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-java-1.6.0.15.ebuild:
  amd64 stable, bug #280409

*emul-linux-x86-java-1.6.0.15 (06 Aug 2009)
*emul-linux-x86-java-1.5.0.20 (06 Aug 2009)

  06 Aug 2009; Vlastimil Babka <caster@gentoo.org>
  +emul-linux-x86-java-1.5.0.20.ebuild,
  +emul-linux-x86-java-1.6.0.15.ebuild:
  Version bump - security bug #280409.

  02 Aug 2009; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-java-1.5.0.19.ebuild:
  amd64 stable, bug #278314

*emul-linux-x86-java-1.5.0.19 (19 Jun 2009)

  19 Jun 2009; Vlastimil Babka <caster@gentoo.org>
  +emul-linux-x86-java-1.5.0.19.ebuild:
  Version bump.

*emul-linux-x86-java-1.6.0.14 (31 May 2009)

  31 May 2009; Vlastimil Babka <caster@gentoo.org>
  +emul-linux-x86-java-1.6.0.14.ebuild:
  Version bump.

  29 May 2009; Vlastimil Babka <caster@gentoo.org>