@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-java/emul-linux-x86-java-1.5.0.22.ebuild,v 1.1 2009/11/04 11:29:57 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-java/emul-linux-x86-java-1.5.0.22.ebuild,v 1.2 2009/11/05 21:29:42 maekke Exp $
 
 inherit versionator pax-utils eutils java-vm-2
 
@@ -15,7 +15,7 @@ SRC_URI="http://download.java.net/dlj/binaries/${At}"
 
 SLOT="1.5"
 LICENSE="dlj-1.1"
-KEYWORDS="-* ~amd64"
+KEYWORDS="-* amd64"
 RESTRICT="strip"
 IUSE="X alsa nsplugin"
 
